--- a/escom-bpm-web/src/main/webapp/view/folders/folder-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/folders/folder-card.xhtml
@@ -9,7 +9,7 @@
 
     <ui:define name="page_body">
 
-        <p:tab title="#{bundle.Explorer}">
+        <p:tab title="#{bundle.Folder}">
             <p:panelGrid layout="grid" columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 ui-panelgrid-blank col-padding">
 
                 <p:outputLabel value="#{bundle.Name}:" />
