--- a/escom-bpm-web/src/main/webapp/view/common/dict-rights-childs.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/dict-rights-childs.xhtml
@@ -4,69 +4,73 @@
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
-    <p:selectBooleanCheckbox value="#{_bean.editedItem.inheritsAccessChilds}" id="inheritsAccessChilds"
-                             disabled="#{_bean.isReadOnly() or !_bean.isHaveRightChangeRight()}"
-                             itemLabel="#{_bean.inheritsAccessChildName}"
-                             valueChangeListener="#{_bean.onInheritsChildsRightChange}">
-        <p:ajax update="docRightsGrid inheritsAccessChilds"/>
-    </p:selectBooleanCheckbox>
-    <h:panelGroup id="docRightsGrid" style="font-size: 80%;">        
-        <ui:repeat var="state" value="#{_bean.stateForChild}">
-            <p:accordionPanel activeIndex="null">
-                <p:tab title="#{bundle.State}: #{stateBean.getBundleName(state)}" rendered="#{_bean.editedItem != null}" > 
-                    <p:dataTable id="tblRight" value="#{_bean.getRightChildsForState(_bean.editedItem, state)}" var="right" 
-                                 tableStyle="table-layout: auto;" styleClass="ui-grid-col-12"
-                                 emptyMessage="#{bundle.EmptyTable}">
-                        <p:column headerText="#{bundle.RightOwner}">
-                             <h:graphicImage value="/resources/icon/#{right.icon}.png"/>
-                            <h:outputText value="#{right.name}"/>
-                        </p:column>
-                        <p:column headerText="#{bundle.Read}" style="text-align: center;">
-                            <p:selectBooleanCheckbox value="#{right.read}" disabled="true"/>
-                        </p:column>
-                        <p:column headerText="#{bundle.Change}" style="text-align: center;">
-                            <p:selectBooleanCheckbox value="#{right.update}" disabled="true"/>
-                        </p:column>
-                        <p:column headerText="#{bundle.Creating}" style="text-align: center;">                                    
-                            <p:selectBooleanCheckbox value="#{right.create}" disabled="true"/>
-                        </p:column>                        
-                        <p:column headerText="#{bundle.Remove}" style="text-align: center;">
-                            <p:selectBooleanCheckbox value="#{right.delete}"  disabled="true"/>                                        
-                        </p:column> 
-                        <p:column headerText="#{bundle.ChangeRight}" style="text-align: center;">                                    
-                            <p:selectBooleanCheckbox value="#{right.changeRight}" disabled="true"/>
-                        </p:column>                         
-                        <p:column headerText="#{bundle.Commands}" style="text-align: center;">
-                            <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-12 without-spaces, ui-grid-col-12 without-spaces" styleClass="ui-grid-col-12 without-spaces">
-                                <p:commandButton icon="ui-icon-document" title="#{bundle.Edit}" styleClass="without-spaces"
-                                                 disabled="#{_bean.isReadOnly() or _bean.editedItem.inheritsAccessChilds}"
-                                                 actionListener="#{_bean.onEditRightChild(right)}" >
-                                    <p:ajax event="dialogReturn" update="#{_frm}:mainTabView:docRightsGrid"
+    <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 col-padding" >
+        <h:panelGrid columns="2" styleClass="ui-grid-col-12" >
+            <p:selectBooleanCheckbox value="#{_bean.editedItem.inheritsAccessChilds}" 
+                                     disabled="#{_bean.isReadOnly() or !_bean.isHaveRightChangeRight()}"
+                                     valueChangeListener="#{_bean.onInheritsChildsRightChange}" >
+                <p:ajax update="docRightsGrid inheritsAccessChilds"/>
+            </p:selectBooleanCheckbox>
+            <p:spacer width="5"/>
+            <h:outputLabel id="inheritsAccessChilds" value="#{_bean.inheritsAccessChildName}"/>
+        </h:panelGrid>
+        <h:panelGroup id="docRightsGrid" style="font-size: 80%;">        
+            <ui:repeat var="state" value="#{_bean.stateForChild}">
+                <p:accordionPanel activeIndex="null">
+                    <p:tab title="#{bundle.State}: #{stateBean.getBundleName(state)}" rendered="#{_bean.editedItem != null}" > 
+                        <p:dataTable id="tblRight" value="#{_bean.getRightChildsForState(_bean.editedItem, state)}" var="right" 
+                                     tableStyle="table-layout: auto;" styleClass="ui-grid-col-12"
+                                     emptyMessage="#{bundle.EmptyTable}">
+                            <p:column headerText="#{bundle.RightOwner}">
+                                <h:graphicImage value="/resources/icon/#{right.icon}.png"/>
+                                <h:outputText value="#{right.name}"/>
+                            </p:column>
+                            <p:column headerText="#{bundle.Read}" style="text-align: center;">
+                                <p:selectBooleanCheckbox value="#{right.read}" disabled="true"/>
+                            </p:column>
+                            <p:column headerText="#{bundle.Change}" style="text-align: center;">
+                                <p:selectBooleanCheckbox value="#{right.update}" disabled="true"/>
+                            </p:column>
+                            <p:column headerText="#{bundle.Creating}" style="text-align: center;">                                    
+                                <p:selectBooleanCheckbox value="#{right.create}" disabled="true"/>
+                            </p:column>                        
+                            <p:column headerText="#{bundle.Remove}" style="text-align: center;">
+                                <p:selectBooleanCheckbox value="#{right.delete}"  disabled="true"/>                                        
+                            </p:column> 
+                            <p:column headerText="#{bundle.ChangeRight}" style="text-align: center;">                                    
+                                <p:selectBooleanCheckbox value="#{right.changeRight}" disabled="true"/>
+                            </p:column>                         
+                            <p:column headerText="#{bundle.Commands}" style="text-align: center;">
+                                <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-12 without-spaces, ui-grid-col-12 without-spaces" styleClass="ui-grid-col-12 without-spaces">
+                                    <p:commandButton icon="ui-icon-document" title="#{bundle.Edit}" styleClass="without-spaces"
+                                                     disabled="#{_bean.isReadOnly() or _bean.editedItem.inheritsAccessChilds}"
+                                                     actionListener="#{_bean.onEditRightChild(right)}" >
+                                        <p:ajax event="dialogReturn" update="#{_frm}:mainTabView:docRightsGrid"
                                                 listener="#{_bean.onCloseRightCard}"/>
-                                </p:commandButton>
-                                <p:commandButton icon="ui-icon-trash" title="#{bundle.Delete}" styleClass="without-spaces"
-                                                 disabled="#{_bean.isReadOnly() or _bean.editedItem.inheritsAccessChilds}"
-                                                 update="tblRight"
-                                                 actionListener="#{_bean.onDeleteRightChild(right)}">
-                                </p:commandButton>
-                            </p:panelGrid>
-                        </p:column>
-                    </p:dataTable>
-                    <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-panelgrid-blank">
-                        <p:commandButton id="btnAddDocRight" value="#{bundle.Add}" 
-                                         icon="ui-icon-circle-plus" style="float:right;"
-                                         disabled="#{_bean.isReadOnly() or !_bean.isHaveRightChangeRight()}"
-                                         rendered="#{!_bean.editedItem.inheritsAccessChilds}" 
-                                         actionListener="#{_bean.onAddRightChild(state)}">
-                             <p:ajax event="dialogReturn" 
-                                     update="#{_frm}:mainTabView:docRightsGrid"
-                                     listener="#{_bean.onCloseRightCard}"/>
-                        </p:commandButton>
-                    </p:panelGrid>
-                </p:tab>
-            </p:accordionPanel>
-        </ui:repeat>
-    </h:panelGroup>
-
+                                    </p:commandButton>
+                                    <p:commandButton icon="ui-icon-trash" title="#{bundle.Delete}" styleClass="without-spaces"
+                                                     disabled="#{_bean.isReadOnly() or _bean.editedItem.inheritsAccessChilds}"
+                                                     update="tblRight"
+                                                     actionListener="#{_bean.onDeleteRightChild(right)}">
+                                    </p:commandButton>
+                                </p:panelGrid>
+                            </p:column>
+                        </p:dataTable>
+                        <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-panelgrid-blank">
+                            <p:commandButton id="btnAddDocRight" value="#{bundle.Add}" 
+                                             icon="ui-icon-circle-plus" style="float:right;"
+                                             disabled="#{_bean.isReadOnly() or !_bean.isHaveRightChangeRight()}"
+                                             rendered="#{!_bean.editedItem.inheritsAccessChilds}" 
+                                             actionListener="#{_bean.onAddRightChild(state)}">
+                                <p:ajax event="dialogReturn" 
+                                        update="#{_frm}:mainTabView:docRightsGrid"
+                                        listener="#{_bean.onCloseRightCard}"/>
+                            </p:commandButton>
+                        </p:panelGrid>
+                    </p:tab>
+                </p:accordionPanel>
+            </ui:repeat>
+        </h:panelGroup>
+    </p:panelGrid>
 </ui:composition>
 
