--- a/escom-bpm-web/src/main/webapp/view/docs/docStatus/docstatus-list.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/docStatus/docstatus-list.xhtml
@@ -65,7 +65,7 @@
                                         locale="#{sessionBean.locale}"                                    
                                         navigator="true" yearRange="c-120:c+20"                                    
                                         requiredMessage="#{bundle.Field} [#{bundle.DateDoc}] #{bundle.MustBeFilled}">
-                                <p:ajax event="dateSelect" listener="#{_bean.onChangeDocStatus(item)}" update="docStatusTbl" />
+                                <p:ajax event="dateSelect" onstart="itemChange = 1;"/>
                             </p:calendar> 
                         </f:facet>
                     </p:cellEditor>
